--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@reduxjs/toolkit": "^2.2.1",
     "ag-grid-community": "^31.2.0",
     "ag-grid-react": "^31.2.0",
